--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="task2a"></div>
 
     <h4>Task 2 b</h4>
+    <button onclick="addText(event)">Add text</button>
 
 
     <h4>Task 2 c</h4>
