--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 
     <h4>Task 2 c</h4>
+    <button onclick="bgChange(event)" style="background: red">Red</button>
+    <button onclick="bgChange(event)" style="background: green">Green</button>
 
 
     <!-- ***** -->
