--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <h2 id="heading">DOM Manipulation Exercises</h3>
     <h4>Task 2 a</h4>
     <div id="task2a"></div>
+    <button onclick="addText(event)">Add text</button>
 
     <h4>Task 2 b</h4>
-    <button onclick="addText(event)">Add text</button>
+    <button onclick="bgChange(event)" style="background: red">Red</button>
+    <button onclick="bgChange(event)" style="background: green">Green</button>
 
 
     <h4>Task 2 c</h4>
-    <button onclick="bgChange(event)" style="background: red">Red</button>
-    <button onclick="bgChange(event)" style="background: green">Green</button>
+    <button onclick="goToGoogle(event)">Go to Goggle</button>
 
 
     <!-- ***** -->
