Task 4 - Using jQuery

--- a/index.html
+++ b/index.html
@@ -22,15 +22,24 @@
     <!-- ***** -->
     <h3>With jQuery</h3>
     <h4>Task 4 a</h4>
+    <button id="addText">Add Text With jQuery</button>
     <div id="task4a"></div>
 
     <h4>Task 4 b</h4>
+    <button class="colorBtn">RED</button>
+    <button class="colorBtn">GREEN</button>
 
 
     <h4>Task 4 c</h4>
+      <input type="number"  id="fnumber" placeholder="Enter First Number">
+      <input type="number"  id="lnumber" placeholder="Enter Second Number">
+      <button id="addBtn">ADD</button>
+      <p>The sum is : <span id="answer"></span></p>
 
 
     <!-- Insert your JavaScript file -->
+      
+      <script src="jquery-3.3.1.min.js"></script>
       <script src="script.js"></script>
   </body>
 </html>
